welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: not found: value L
		if(Mes == L){
                          ^BDRBuggle:13: error: not found: value I
			if(Mes == I){
                                  ^BDRBuggle:18: error: not found: value A
				if(Mes == A){
                                          ^BDRBuggle:21: error: not found: value B
					if(Mes == B){
                                                  ^BDRBuggle:25: error: not found: value C
						if(Mes == C){
                                                          ^BDRBuggle:30: error: not found: value Z
							if(Mes == Z){
                                                                  ^BDRBuggle:33: error: not found: value Y
								if(Mes == Y){
                                                                          ^BDRBuggle:37: error: not found: value X
									if(Mes == X){
                                                                                  ^